Bug 251034 - Plasma desktop crashed while I configured the lancelot panel drawer widget
Summary: Plasma desktop crashed while I configured the lancelot panel drawer widget
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-lancelot (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
: 256151 263570 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-09-13 02:49 UTC by Tanja Schulte
Modified: 2011-01-18 19:51 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tanja Schulte 2010-09-13 02:49:59 UTC
Application: plasma-desktop (0.3)
KDE Platform Version: 4.5.1 (KDE 4.5.1)
Qt Version: 4.7.0
Operating System: Linux 2.6.32-25-generic i686
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
- What I was doing when the application crashed:
I added the lancelot menu (apps only) and two lancelot drawers to the panel and configured the second one: added a part of the menu (submenu, path manually entered because not available in category chooser)

-- Backtrace:
Application: Plasma-Arbeitsfläche (plasma-desktop), signal: Segmentation fault
[Current thread is 1 (Thread 0xb78c3720 (LWP 9455))]

Thread 3 (Thread 0xb052bb70 (LWP 9457)):
#0  0x00e8a422 in __kernel_vsyscall ()
#1  0x00796015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x008ae9dd in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0x02cd551d in ?? () from /usr/lib/libQtWebKit.so.4
#4  0x02cd5601 in ?? () from /usr/lib/libQtWebKit.so.4
#5  0x0079196e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#6  0x008a1a4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xac734b70 (LWP 9535)):
#0  0x0482ae57 in g_main_context_query () from /lib/libglib-2.0.so.0
#1  0x0482ff34 in ?? () from /lib/libglib-2.0.so.0
#2  0x048304b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#3  0x013ec82f in QEventDispatcherGlib::processEvents (this=0xa758fb0, flags=...) at kernel/qeventdispatcher_glib.cpp:417
#4  0x013bca99 in QEventLoop::processEvents (this=0xac734280, flags=) at kernel/qeventloop.cpp:149
#5  0x013bcf1a in QEventLoop::exec (this=0xac734280, flags=...) at kernel/qeventloop.cpp:201
#6  0x012b9c5e in QThread::exec (this=0xa74d4f0) at thread/qthread.cpp:490
#7  0x0139b9ab in QInotifyFileSystemWatcherEngine::run (this=0xa74d4f0) at io/qfilesystemwatcher_inotify.cpp:248
#8  0x012bcf39 in QThreadPrivate::start (arg=0xa74d4f0) at thread/qthread_unix.cpp:266
#9  0x0079196e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#10 0x008a1a4e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb78c3720 (LWP 9455)):
[KCrash Handler]
#7  0x0ba80eb8 in ?? ()
#8  0x08fdb223 in Lancelot::Models::OpenDocuments::Private::taskRemoved(KSharedPtr<TaskManager::Task>) () from /usr/lib/liblancelot-datamodels.so.0
#9  0x08fdbed8 in Lancelot::Models::OpenDocuments::Private::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/liblancelot-datamodels.so.0
#10 0x013c3d4a in QMetaObject::metacall (object=0xb89c2c8, cl=193577672, idx=2, argv=0xbfb75158) at kernel/qmetaobject.cpp:237
#11 0x013d6ab5 in QMetaObject::activate (sender=0xa320ea8, m=0x39a3dc4, local_signal_index=1, argv=0xbfb75258) at kernel/qobject.cpp:3280
#12 0x039981b3 in TaskManager::TaskManager::taskRemoved (this=0xa320ea8, _t1=...) at ./taskmanager.moc:170
#13 0x0399b07f in TaskManager::TaskManager::windowRemoved (this=0xa320ea8, w=32880284) at ../../../libs/taskmanager/taskmanager.cpp:309
#14 0x0399bca7 in TaskManager::TaskManager::qt_metacall (this=0xa320ea8, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0xbfb75438) at ./taskmanager.moc:117
#15 0x013c3d4a in QMetaObject::metacall (object=0xa320ea8, cl=193577672, idx=11, argv=0xbfb75438) at kernel/qmetaobject.cpp:237
#16 0x013d6ab5 in QMetaObject::activate (sender=0x9b728e0, m=0x124efec, local_signal_index=2, argv=0xbfb75438) at kernel/qobject.cpp:3280
#17 0x011d9193 in KWindowSystem::windowRemoved (this=0x9b728e0, _t1=32880284) at ./kwindowsystem.moc:133
#18 0x011dc3f6 in KWindowSystemPrivate::removeClient (this=0x9b08d70, w=32880284) at ../../kdeui/windowmanagement/kwindowsystem_x11.cpp:253
#19 0x011eb64f in NETRootInfo::update (this=0x9b08d84, dirty_props=0xbfb755c8) at ../../kdeui/windowmanagement/netwm.cpp:2195
#20 0x011ec1c7 in NETRootInfo::event (this=0x9b08d84, event=<value optimized out>, properties=0xbfb756b4, properties_size=5) at ../../kdeui/windowmanagement/netwm.cpp:2070
#21 0x011dc691 in KWindowSystemPrivate::x11Event (this=0x9b08d70, ev=0xbfb75bac) at ../../kdeui/windowmanagement/kwindowsystem_x11.cpp:136
#22 0x0107551a in KAppX11HackWidget::publicx11Event (this=0x996ae28, _event=0xbfb75bac) at ../../kdeui/kernel/kapplication.cpp:915
#23 KApplication::x11EventFilter (this=0x996ae28, _event=0xbfb75bac) at ../../kdeui/kernel/kapplication.cpp:966
#24 0x0075ec3a in PlasmaApp::x11EventFilter (this=0x996ae28, event=0xbfb75bac) at ../../../../plasma/desktop/shell/plasmaapp.cpp:643
#25 0x016b0440 in qt_x11EventFilter (ev=0xbfb75bac) at kernel/qapplication_x11.cpp:408
#26 0x016c0e80 in QApplication::x11ProcessEvent (this=0x996ae28, event=0xbfb75bac) at kernel/qapplication_x11.cpp:3248
#27 0x016f156a in x11EventSourceDispatch (s=0x997c2e8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#28 0x0482c5e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#29 0x048302d8 in ?? () from /lib/libglib-2.0.so.0
#30 0x048304b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#31 0x013ec7f5 in QEventDispatcherGlib::processEvents (this=0x9954568, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#32 0x016f0de5 in QGuiEventDispatcherGlib::processEvents (this=0x9954568, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#33 0x013bca99 in QEventLoop::processEvents (this=0xbfb75ea4, flags=) at kernel/qeventloop.cpp:149
#34 0x013bcf1a in QEventLoop::exec (this=0xbfb75ea4, flags=...) at kernel/qeventloop.cpp:201
#35 0x013c14cf in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#36 0x0162e5a7 in QApplication::exec () at kernel/qapplication.cpp:3672
#37 0x00747b1e in kdemain (argc=1, argv=0xbfb760b4) at ../../../../plasma/desktop/shell/main.cpp:118
#38 0x0804860b in main (argc=1, argv=0xbfb760b4) at plasma-desktop_dummy.cpp:3

Reported using DrKonqi
Comment 1 Ivan Čukić 2010-09-13 09:09:02 UTC
Is it possible for you to install the debugging packages for plasma addons and lancelot and replicate this so that I can know the exact position of the crash?
Comment 2 Ivan Čukić 2010-10-22 12:37:57 UTC
SVN commit 1188416 by ivan:

- SO bump
- fixed memory leak / crash

BUG: 251034



 M  +1 -1      CMakeLists.txt  
 M  +3 -13     OpenDocuments.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1188416
Comment 3 Ivan Čukić 2010-11-06 09:44:06 UTC
*** Bug 256151 has been marked as a duplicate of this bug. ***
Comment 4 Aaron J. Seigo 2011-01-18 19:51:03 UTC
*** Bug 263570 has been marked as a duplicate of this bug. ***