- SO bump - fixed memory leak / crash

BUG: 251034


svn path=/trunk/KDE/kdeplasma-addons/; revision=1188416